--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
   </head>
@@ -6,4 +6,4 @@
     <div id=main></div>
     <script async defer src="/bundle.js"></script>    
   </body>
-</html> 
+</html>
