getting somewhere with header

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <div id=main></div>
+    <link rel="stylesheet" type="text/css" href="./assets/styles.css"/>
     <script async defer src="/bundle.js"></script>    
   </body>
 </html>
