--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>The Witcher</title>
+    <title>The Witcher Coding Academy</title>
   </head>
   <body>
     <div id=main></div>
